#               0.1.4 Thu 11 Jul 2013 16:48:52 EST
#               Added archive code
#               0.1.5 Thu 11 Jul 2013 18:27:19 EST
#               Added handling to ignore non firmware URLs in output
#               0.1.6 Thu 11 Jul 2013 19:13:54 EST
#               Added handling for non existant model
#               0.1.7 Thu 11 Jul 2013 19:25:03 EST
#               Improved firmware download URL creation
#               0.1.8 Thu 11 Jul 2013 19:41:35 EST
#               Added support to create directories if the don't exist
#               0.1.9 Thu 11 Jul 2013 21:37:27 EST
#               Added functionality to list ZIP file contents and TFTP boot file
#               0.2.0 Thu 11 Jul 2013 22:04:11 EST
#               More handling for older firmware file naming inconsistencies
#               0.2.1 Fri 12 Jul 2013 00:48:26 EST
#               Bug fixes
#		0.2.2 Fri 12 Jul 2013 07:00:11 ES
#               Cleaned up zip file routine
#		0.2.3 Fri 12 Jul 2013 15:56:49 EST
#               Fixed bug with TFTP boot image code and updated README.md
#               0.2.4 Fri 19 Jul 2013 14:02:32 EST
#               Fixed bug with disk firmware code
#               0.2.5 Fri 19 Jul 2013 14:43:06 EST
#               Improved disk firmware output
#               0.2.6 Fri 19 Jul 2013 21:52:08 EST
#               Futher improved disk firmware code
#               0.2.7 Sat 20 Jul 2013 15:45:32 EST
#               Fixed Emulex firmware output
#               0.2.8 Sat 20 Jul 2013 16:37:50 EST
#               Improved Emulex firmware output
#               0.2.9 Sat 20 Jul 2013 21:15:33 EST
#               Fixed bugs with listing zip files
#		0.3.0 Sat 20 Jul 2013 21:43:29 EST
#               Fixed buga with system firmware output
#               0.3.1 Sun 21 Jul 2013 04:47:12 EST
#               Added code to fetch XCP Document 
#               0.3.2 Sun 21 Jul 2013 22:03:15 EST
#               Added M Series XCP/XSCF firmware matrix processing