@@ -5,7 +5,13 @@ Get Oracle OBP Firmware
 
 This script parses the Oracle firmware page to get firmware information.
 It returns the versions of firmware (top most is the current) and their
-URLs.
+URLs. The Oracle downloads require a support contract and a MOS account.
+
+The Oracle downloads for patches and READMEs currently use wget as all
+the ruby web modules fail with the Oracle site. Similarly the code
+to download the XSCF uses Selenium and Safari due to poorly formatted
+html and hidden elements on the MOS login page. I've tried PhantomJS
+and it fails.
 
 Oracle Firmware URL:
 
@@ -41,6 +47,10 @@ http://driverdownloads.qlogic.com/QLogicDriverDownloads_UI/SearchByProductOracle
 http://driverdownloads.qlogic.com/QLogicDriverDownloads_UI/SearchByProductOracle.aspx?oemid=124&productid=928&OSTYPE=Solaris&category=2
 http://driverdownloads.qlogic.com/QLogicDriverDownloads_UI/SearchByProductOracle.aspx?oemid=124&productid=928&OSTYPE=Solaris&category=3
 
+M Series XSCF web page:
+
+https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+
 Usage
 =====
 
@@ -57,13 +67,15 @@ Usage
 	-d all:      Display firmware information for all disks
 	-e all:      Display firmware information for all Emulex HBAs
 	-q all:      Display firmware information for all Qlogic HBAs
+	-X all:      Display firmware information for all M Series
 	-m MODEL:    Display firmware information for a specific model (eg. X2-4)
 	-z MODEL:    Display firmware zip file contents for a specific model (eg. X2-4)
-	-t MODEL:    Display TFTP file for a specfic model
+	-t MODEL:    Display TFTP file for a specfic model (e.g. T5440)
 	-M MODEL:    Download firmware patch for a specific model (eg. X2-4) from MOS (Requires Username and Password)
 	-d MODEL:    Display firmware information for a specific model of disk (eg. MAW3300FC)
 	-e MODEL:    Display firmware information for a specific model of Emulex HBA (eg. SG-XPCIEFCGBE-E8-Z)
 	-q MODEL:    Display firmware information for a specific model of Qlogic HBA (eg. SG-XPCIEFCGBE-Q8-Z)
+	-X MODEL:    Display firmware information for specific M Series model (e.g. M3000)
 	-i FILE:     Open a locally saved HTML file for processing rather then fetching it
 	-p PATCH:    Download a patch from MOS (Requires Username and Password)
 	-r PATCH:    Download README for a patch from MOS (Requires Username and Password)
@@ -174,3 +186,40 @@ Display TFTP boot image information for X6270M2:
 	X6270M2:
 	TFTP file: ILOM-3_0_16_11_h_r75207-Sun_Blade_X6270M2.pkg
 	Location:  /Users/spindler/.goofball/x6270m2/ILOM_and_BIOS/ILOM-3_0_16_11_h_r75207-Sun_Blade_X6270M2.pkg
+
+Display all M3000 XSCF firmware history:
+
+	$ ./goofball.rb -X M3000
+	M3000:
+	XCP1115 02.32.0000 01.11.0005 POST 2.17.0 4.33.5.d M3000-M9000 April 2013
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1114 02.32.0000 01.11.0004 POST 2.17.0 4.33.5.d M3000-M9000 November 2012
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1113 02.29.0000 01.11.0003 POST 2.17.0 4.33.5.a M3000-M9000 July 2012
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1112 02.29.0000 01.11.0002 POST 2.17.0 4.33.5.a M3000-M9000 May 2012
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1111 02.29.0000 01.11.0000 POST 2.17.0 4.33.5.a M3000-M9000 April 2012
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1110 02.29.0000 01.11.0000 POST 2.17.0 4.33.5.a M3000-M9000 February 2012
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1102 02.24.0000 01.10.0002 POST 2.15.0 4.33.0.a M3000-M9000 June 2011
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1101 02.21.0000 01.10.0001 POST 2.15.0 4.24.16 M3000-M9000 Mar 2011
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1100 02.18.0000 01.10.0000 POST 2.14.0 4.24.15 M3000-M9000 Dec 2010
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1093 02.16.0000 01.09.0003 POST 2.14.0 4.24.14 M3000-M9000 Aug 2010
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1092 02.14.0000 01.09.0002 POST 2.13.0 4.24.13 M3000-M9000 Apr 2010
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1091 02.13.0000 01.09.0001 POST 2.13.0 4.24.12 M3000-M9000 Nov 2009
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1090 02.11.0000 01.09.0000 POST 2.11.0 4.24.11 M3000-M9000 Aug 2009
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1082 02.09.0000 01.08.0005 POST 2.9.0 OBP 4.24.10 M3000-M9000 May 2009
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1081 02.08.0000 01.08.0004 POST 2.8.0 OBP 4.24.10 M3000-M9000 Feb 2009
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
+	XCP1080 02.07.0000 01.08.0002 POST 2.7.0 OBP 4.24.10 M3000 31st Oct 2008 M4000-M9000 mid Nov 2008
+	https://support.oracle.com/epmos/faces/DocContentDisplay?id=1002631.1
