@@ -56,9 +56,11 @@
 #               Improved Emulex firmware output
 #               0.2.9 Sat 20 Jul 2013 21:15:33 EST
 #               Fixed bugs with listing zip files
-#		0.3.0 Sat 20 Jul 2013 21:43:29 EST
+#               0.3.0 Sat 20 Jul 2013 21:43:29 EST
 #               Fixed buga with system firmware output
 #               0.3.1 Sun 21 Jul 2013 04:47:12 EST
 #               Added code to fetch XCP Document 
 #               0.3.2 Sun 21 Jul 2013 22:03:15 EST
 #               Added M Series XCP/XSCF firmware matrix processing
+#               0.3.3 Tue 23 Jul 2013 09:59:27 EST
+#               Fixed CSV output for M Series
